--- a/src/app/components/equipment/test/test-equipment-dialog/test-equipment-dialog.html
+++ b/src/app/components/equipment/test/test-equipment-dialog/test-equipment-dialog.html
@@ -142,6 +142,8 @@
                   [matDatepicker]="contractDatePicker"
                   formControlName="contractDate"
                   placeholder="Выберите дату"
+                  readonly
+                  (click)="contractDatePicker.open()"
                 />
                 <mat-datepicker-toggle matSuffix [for]="contractDatePicker"></mat-datepicker-toggle>
                 <mat-datepicker #contractDatePicker></mat-datepicker>
@@ -167,7 +169,13 @@
               @if (form.get('contract.isOwn')?.value === false) {
                 <mat-form-field appearance="outline">
                   <mat-label>Дата окончания</mat-label>
-                  <input matInput [matDatepicker]="endPicker" formControlName="endAt">
+                  <input
+                    matInput
+                    [matDatepicker]="endPicker"
+                    formControlName="endAt"
+                    readonly
+                    (click)="endPicker.open()"
+                  >
                   <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
                   <mat-datepicker #endPicker></mat-datepicker>
                 </mat-form-field>
@@ -203,7 +211,13 @@
 
                       <mat-form-field appearance="outline">
                         <mat-label>Дата аттестации</mat-label>
-                        <input matInput [matDatepicker]="startPicker" formControlName="startAt" />
+                        <input
+                          matInput
+                          [matDatepicker]="startPicker"
+                          formControlName="startAt"
+                          readonly
+                          (click)="startPicker.open()"
+                        />
                         <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
                         <mat-datepicker #startPicker></mat-datepicker>
                         @if (control.get('startAt')?.hasError('required') && control.get('startAt')?.touched) {
@@ -233,6 +247,8 @@
                             [matDatepicker]="endPicker"
                             formControlName="endAt"
                             placeholder="Выберите дату"
+                            readonly
+                            (click)="endPicker.open()"
                           />
                           <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
                           <mat-datepicker #endPicker></mat-datepicker>
@@ -374,9 +390,15 @@
                           <input matInput type="number" formControlName="interval" min="1" required>
                           <span matSuffix>
                     @switch (control.get('frequency')?.value) {
-                      @case ('WEEKLY') { недель }
-                      @case ('MONTHLY') { месяцев }
-                      @case ('YEARLY') { лет }
+                      @case ('WEEKLY') {
+                        недель
+                      }
+                      @case ('MONTHLY') {
+                        месяцев
+                      }
+                      @case ('YEARLY') {
+                        лет
+                      }
                     }
                   </span>
                           @if (control.get('interval')?.hasError('required') && control.get('interval')?.touched) {
