--- a/src/styles/_easy_style.scss
+++ b/src/styles/_easy_style.scss
@@ -2,6 +2,14 @@
   margin-right: 20px;
 }
 
+.ml-20 {
+  margin-left: 20px;
+}
+
+.h18{
+  font-size: 18px;
+}
+
 .grid {
   display: grid;
   grid-template-columns: auto auto;
