--- a/src/app/components/resource/room/address/room-dialog.html
+++ b/src/app/components/resource/room/address/room-dialog.html
@@ -162,6 +162,8 @@
                   [matDatepicker]="contractDatePicker"
                   formControlName="contractDate"
                   placeholder="Выберите дату"
+                  readonly
+                  (click)="contractDatePicker.open()"
                 />
                 <mat-datepicker-toggle matSuffix [for]="contractDatePicker"></mat-datepicker-toggle>
                 <mat-datepicker #contractDatePicker></mat-datepicker>
@@ -186,7 +188,13 @@
               @if (form.get('contract.isOwn')?.value === false) {
                 <mat-form-field appearance="outline">
                   <mat-label>Дата окончания</mat-label>
-                  <input matInput [matDatepicker]="endPicker" formControlName="endAt">
+                  <input
+                    matInput
+                    [matDatepicker]="endPicker"
+                    formControlName="endAt"
+                    readonly
+                    (click)="endPicker.open()"
+                  >
                   <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
                   <mat-datepicker #endPicker></mat-datepicker>
                   <!-- ❗ НЕТ mat-error для 'required', так как поле НЕ обязательно -->
