--- a/src/app/components/standard-sample/solution/chemical-solution-dialog/chemical-solution-dialog.html
+++ b/src/app/components/standard-sample/solution/chemical-solution-dialog/chemical-solution-dialog.html
@@ -4,150 +4,217 @@
       <mat-icon>inventory_2</mat-icon>
       <h2 class="title">{{ title }}</h2>
     </div>
-    <p class="subtitle">Заполните информацию о реактиве</p>
+    <p class="subtitle">Заполните информацию о приготовленном растворе</p>
   </div>
 
   <mat-dialog-content class="dialog-content">
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form">
+      <mat-accordion displayMode="flat">
 
+        <!-- ОСНОВНАЯ ИНФОРМАЦИЯ -->
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Основная информация
+            </mat-panel-title>
+          </mat-expansion-panel-header>
 
-      <div class="form-fields">
-        <!-- Наименование -->
-        <mat-form-field appearance="outline">
-          <mat-label>Наименование</mat-label>
-          <input matInput formControlName="name" placeholder="Например, Раствор хлорида натрия">
-          <mat-icon matPrefix>title</mat-icon>
-          @if (form.get('name')?.hasError('required') && form.get('name')?.touched) {
-            <mat-error>Укажите наименование</mat-error>
-          }
-        </mat-form-field>
+          <div class="form-fields">
+            <mat-form-field appearance="outline">
+              <mat-label>Наименование</mat-label>
+              <input matInput formControlName="name" placeholder="Например, Хлорид натрия">
+              <mat-icon matPrefix>title</mat-icon>
+              @if (form.get('name')?.hasError('required') && form.get('name')?.touched) {
+                <mat-error>Укажите наименование</mat-error>
+              }
+            </mat-form-field>
 
-        <!-- Назначение -->
-        <mat-form-field appearance="outline">
-          <mat-label>Назначение</mat-label>
-          <textarea matInput formControlName="purpose"
-                    placeholder="Для градуировки приборов, контроля методик..."></textarea>
-          <mat-icon matPrefix>description</mat-icon>
-          @if (form.get('purpose')?.hasError('required') && form.get('purpose')?.touched) {
-            <mat-error>Укажите назначение</mat-error>
-          }
-        </mat-form-field>
+            <!-- Нормативнй документ -->
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Методики измерения</mat-label>
 
-        <!-- Условия применения -->
-        <mat-form-field appearance="outline">
-          <mat-label>Условия применения и хранения</mat-label>
-          <textarea matInput formControlName="termsOfUse"
-                    placeholder="Температура, влажность, особые условия..."></textarea>
-        </mat-form-field>
+              <mat-chip-grid #chipList>
+                @for (docId of form.get('regulatoryDocuments')?.value || []; track docId) {
+                  <mat-chip-row (removed)="removeDocument(docId)">
+                    {{ getDocumentValue(docId) }}
+                    <button matChipRemove>
+                      <mat-icon>cancel</mat-icon>
+                    </button>
+                  </mat-chip-row>
+                }
+              </mat-chip-grid>
 
-        <!-- Дополнительная информация -->
-        <mat-form-field appearance="outline">
-          <mat-label>Дополнительная информация</mat-label>
-          <textarea matInput formControlName="information"
-                    placeholder="Дополнительные сведения..."></textarea>
-        </mat-form-field>
+              <div class="input-guide-with-button">
+                <input
+                  matInput
+                  [formControl]="documentInput"
+                  [matAutocomplete]="auto"
+                  [matChipInputFor]="chipList"
+                  [matChipInputSeparatorKeyCodes]="[]"
+                  (matChipInputTokenEnd)="preventAdd($event)"/>
 
-        <!-- Нормативнй документ -->
-        <mat-form-field appearance="outline" class="full-width">
-          <mat-label>Нормативный документ</mat-label>
-
-          <mat-chip-grid #chipList>
-            @for (docId of form.get('regulatoryDocuments')?.value || []; track docId) {
-              <mat-chip-row (removed)="removeDocument(docId)">
-                {{ getDocumentValue(docId) }}
-                <button matChipRemove>
-                  <mat-icon>cancel</mat-icon>
+                <button
+                  mat-icon-button
+                  type="button"
+                  (click)="openRegulatoryDocumentGuide()"
+                  [matTooltip]="'Добавить новый документв'"
+                  class="open-guide-button">
+                  <mat-icon>open_in_new</mat-icon>
                 </button>
-              </mat-chip-row>
-            }
-          </mat-chip-grid>
+              </div>
 
-          <!-- Контейнер для input + кнопки -->
-          <div class="input-guide-with-button">
-            <input
-              matInput
-              [formControl]="documentInput"
-              [matAutocomplete]="auto"
-              [matChipInputFor]="chipList"
-              [matChipInputSeparatorKeyCodes]="[]"
-              (matChipInputTokenEnd)="preventAdd($event)" />
+              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onDocumentSelected($event)">
+                @for (doc of filteredDocuments(); track doc) {
+                  <mat-option [value]="doc">{{ doc }}</mat-option>
+                }
+              </mat-autocomplete>
 
-            <button
-              mat-icon-button
-              type="button"
-              (click)="openRegulatoryDocumentGuide()"
-              [matTooltip]="'Добавить новый документв'"
-              class="open-guide-button">
-              <mat-icon>open_in_new</mat-icon>
-            </button>
+              <mat-icon matPrefix>description</mat-icon>
+            </mat-form-field>
+
+            <!-- Назначение -->
+            <mat-form-field appearance="outline">
+              <mat-label>Назначение</mat-label>
+              <textarea matInput formControlName="purpose"
+                        placeholder="Для градуировки приборов, контроля методик..."></textarea>
+              <mat-icon matPrefix>description</mat-icon>
+              @if (form.get('purpose')?.hasError('required') && form.get('purpose')?.touched) {
+                <mat-error>Укажите назначение</mat-error>
+              }
+            </mat-form-field>
+
+            <!-- Сведения о стандартном образце -->
+            <mat-form-field appearance="outline">
+              <mat-label>Дополнительная информация</mat-label>
+              <textarea matInput formControlName="information"
+                        placeholder="Аттестованные значения, методы аттестации..."></textarea>
+            </mat-form-field>
+
+            <div class="grid">
+              <!-- Дата изготовления -->
+              <mat-form-field appearance="outline">
+                <mat-label>Дата изготовления</mat-label>
+                <input
+                  matInput
+                  [matDatepicker]="produceDatePicker"
+                  formControlName="produceDate"
+                  placeholder="Выберите дату"
+                  readonly
+                  (click)="produceDatePicker.open()"
+                />
+                <mat-datepicker-toggle matSuffix [for]="produceDatePicker"></mat-datepicker-toggle>
+                <mat-datepicker #produceDatePicker></mat-datepicker>
+                @if (form.get('produceDate')?.hasError('required') && form.get('produceDate')?.touched) {
+                  <mat-error>Укажите дату изготовления</mat-error>
+                }
+              </mat-form-field>
+
+              <!-- Срок годности -->
+              <mat-form-field appearance="outline">
+                <mat-label>Срок годности до</mat-label>
+                <input
+                  matInput
+                  [matDatepicker]="expirationDatePicker"
+                  formControlName="expirationDate"
+                  placeholder="Выберите дату"
+                  readonly
+                  (click)="expirationDatePicker.open()"
+                />
+                <mat-datepicker-toggle matSuffix [for]="expirationDatePicker"></mat-datepicker-toggle>
+                <mat-datepicker #expirationDatePicker></mat-datepicker>
+                @if (form.get('expirationDate')?.hasError('required') && form.get('expirationDate')?.touched) {
+                  <mat-error>Укажите срок годности</mat-error>
+                }
+              </mat-form-field>
+            </div>
+
+            <!-- Условия применения -->
+            <mat-form-field appearance="outline">
+              <mat-label>Условия применения и хранения</mat-label>
+              <textarea matInput formControlName="termsOfUse"
+                        placeholder="Температура, влажность, особые условия..."></textarea>
+            </mat-form-field>
           </div>
 
-          <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onDocumentSelected($event)">
-            @for (doc of filteredDocuments(); track doc) {
-              <mat-option [value]="doc">{{ doc }}</mat-option>
-            }
-          </mat-autocomplete>
+          <div class="grid">
+            <mat-form-field appearance="outline">
+              <mat-label>Начальный остаток</mat-label>
+              <input matInput type="number" step="0.001" formControlName="initialQuantity"/>
+              @if (form.get('initialQuantity')?.hasError('required') && form.get('initialQuantity')?.touched) {
+                <mat-error>Укажите количество</mat-error>
+              }
+              @if (form.get('initialQuantity')?.hasError('greaterThanZero')) {
+                <mat-error>Количество должно быть больше 0</mat-error>
+              }
+            </mat-form-field>
 
-          <mat-icon matPrefix>description</mat-icon>
-        </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Единица измерения</mat-label>
+              <input matInput formControlName="unit" placeholder="мл, г, шт..."/>
+              @if (form.get('unit')?.hasError('required') && form.get('unit')?.touched) {
+                <mat-error>Укажите единицу измерения</mat-error>
+              }
+            </mat-form-field>
+          </div>
+        </mat-expansion-panel>
 
-        <div class="grid">
-          <!-- Дата изготовления -->
-          <mat-form-field appearance="outline">
-            <mat-label>Дата изготовления</mat-label>
-            <input
-              matInput
-              [matDatepicker]="produceDatePicker"
-              formControlName="produceDate"
-              placeholder="Выберите дату"
-            />
-            <mat-datepicker-toggle matSuffix [for]="produceDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #produceDatePicker></mat-datepicker>
-            @if (form.get('produceDate')?.hasError('required') && form.get('produceDate')?.touched) {
-              <mat-error>Укажите дату изготовления</mat-error>
-            }
-          </mat-form-field>
+        <!-- Компоненты раствора -->
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>Компоненты раствора</mat-panel-title>
+          </mat-expansion-panel-header>
 
-          <!-- Срок годности -->
-          <mat-form-field appearance="outline">
-            <mat-label>Срок годности до</mat-label>
-            <input
-              matInput
-              [matDatepicker]="expirationDatePicker"
-              formControlName="expirationDate"
-              placeholder="Выберите дату"
-            />
-            <mat-datepicker-toggle matSuffix [for]="expirationDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #expirationDatePicker></mat-datepicker>
-            @if (form.get('expirationDate')?.hasError('required') && form.get('expirationDate')?.touched) {
-              <mat-error>Укажите срок годности</mat-error>
-            }
-          </mat-form-field>
-        </div>
+          <div class="form-fields">
+            <div formArrayName="solutionComponents"> <!-- ← Правильное имя -->
+              @for (control of solutionComponents.controls; track $index; let i = $index) {
+                <div [formGroupName]="i" class="grid" style="">
+                  <!-- Количество -->
+                  <mat-form-field appearance="outline">
+                    <mat-label>Количество</mat-label>
+                    <input matInput type="number" step="0.001" formControlName="value" placeholder="0.000">
+                    @if (control.get('value')?.hasError('required') && control.get('value')?.touched) {
+                      <mat-error>Укажите количество</mat-error>
+                    }
+                  </mat-form-field>
 
-        <div class="grid">
-          <mat-form-field appearance="outline">
-            <mat-label>Начальный остаток</mat-label>
-            <input matInput type="number" step="0.001" formControlName="initialQuantity"/>
-            @if (form.get('initialQuantity')?.hasError('required') && form.get('initialQuantity')?.touched) {
-              <mat-error>Укажите количество</mat-error>
-            }
-            @if (form.get('initialQuantity')?.hasError('greaterThanZero')) {
-              <mat-error>Количество должно быть больше 0</mat-error>
-            }
-          </mat-form-field>
+                  <!-- Реагент -->
+                  <mat-form-field appearance="outline">
+                    <mat-label>Реагент</mat-label>
+                    <input matInput formControlName="reagentId" placeholder="ID реагента">
+                    @if (control.get('reagentId')?.hasError('required') && control.get('reagentId')?.touched) {
+                      <mat-error>Укажите реагент</mat-error>
+                    }
+                  </mat-form-field>
 
-          <mat-form-field appearance="outline">
-            <mat-label>Единица измерения</mat-label>
-            <input matInput formControlName="unit" placeholder="мл, г, шт..."/>
-            @if (form.get('unit')?.hasError('required') && form.get('unit')?.touched) {
-              <mat-error>Укажите единицу измерения</mat-error>
-            }
-          </mat-form-field>
-        </div>
+                  <!-- Кнопка удаления -->
+                  <button
+                    type="button"
+                    mat-icon-button
+                    color="warn"
+                    (click)="removeSolutionComponent(i)"
+                    [disabled]="solutionComponents.length === 1">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              }
 
+              @if (solutionComponents.length === 0) {
+                <p class="no-data">Нет добавленных компонентов</p>
+              }
+            </div>
 
-      </div>
+            <button
+              mat-stroked-button
+              type="button"
+              (click)="addSolutionComponents()"
+              class="add-component-btn">
+              <mat-icon>add</mat-icon>
+              Добавить компонент
+            </button>
+          </div>
+        </mat-expansion-panel>
+
+      </mat-accordion>
     </form>
   </mat-dialog-content>
 
