--- a/src/app/components/standard-sample/standard-main/standard-main.html
+++ b/src/app/components/standard-sample/standard-main/standard-main.html
@@ -1,7 +1,7 @@
 <mat-tab-group class="vertical-tabs" mat-stretch-tabs="false">
   <mat-tab label="Стандартные образцы">
     <ng-template matTabContent>
-      <app-standard-equipment></app-standard-equipment>
+      <app-standard-sample></app-standard-sample>
     </ng-template>
   </mat-tab>
   <mat-tab label="Реактивы">
