--- a/src/app/components/standard-sample/precursors/precursors-main/precursors-main.html
+++ b/src/app/components/standard-sample/precursors/precursors-main/precursors-main.html
@@ -25,7 +25,7 @@
       Колонки
     </button>
     <mat-menu #columnMenu="matMenu">
-      @for (col of allColumns; track col) {
+      @for (col of getAllColumns(); track col) {
         @if (col !== 'index' && col !== 'actions') {
           <button mat-menu-item>
             <mat-checkbox
@@ -171,16 +171,18 @@
             <span>Создать на основе</span>
           </button>
 
-          <button
-            mat-menu-item
-            (click)="openDialogExpenditure(item)">
-            <mat-icon>remove_shopping_cart</mat-icon>
-            <span>Взять реактив</span>
-          </button>
+          @if (item.canUse) {
+            <button
+              mat-menu-item
+              (click)="openDialogExpenditure(ReagentExpenditureDialog, item, Mode.CREATE)">
+              <mat-icon>remove_shopping_cart</mat-icon>
+              <span>Взять реактив</span>
+            </button>
+          }
 
           <button
             mat-menu-item
-            (click)="openHistoryExpenditure(item)">
+            (click)="openDialogExpenditure(ReagentHistoryExpenditure, item, Mode.VIEW)">
             <mat-icon>receipt_long</mat-icon>
             <span>История расхода</span>
           </button>
@@ -188,7 +190,7 @@
           <!-- Удалить -->
           <button
             mat-menu-item
-            (click)="delete(item.id)">
+            (click)="delete(getPathDelete(item.id))">
             <mat-icon>{{ item.canUse ? 'move_to_inbox' : 'delete' }}</mat-icon>
             <span>{{ item.canUse ? 'Убрать в архив' : 'Удалить' }} </span>
           </button>
