--- a/src/app/components/standard-sample/solution/chemical-solution-main/chemical-solution-main.html
+++ b/src/app/components/standard-sample/solution/chemical-solution-main/chemical-solution-main.html
@@ -1,6 +1,5 @@
-<!-- Заголовок и кнопка добавления -->
 <div class="section-header">
-  <h2>Реактивы</h2>
+  <h2>Приготовленые растворы</h2>
   <mat-form-field appearance="outline" class="view-mode-select">
     <mat-label>Просмотр</mat-label>
     <mat-select [(value)]="viewMode">
@@ -10,7 +9,7 @@
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="view-mode-select">
-    <mat-label>Просмотр СО</mat-label>
+    <mat-label>Просмотр</mat-label>
     <mat-select [(value)]="canUse">
       <mat-option value="all">Все реактивы</mat-option>
       <mat-option value="isCanUse">Можно использовать</mat-option>
@@ -26,7 +25,7 @@
       Колонки
     </button>
     <mat-menu #columnMenu="matMenu">
-      @for (col of allColumns; track col) {
+      @for (col of getAllColumns(); track col) {
         @if (col !== 'index' && col !== 'actions') {
           <button mat-menu-item>
             <mat-checkbox
@@ -58,15 +57,15 @@
       </td>
     </ng-container>
 
-    <!-- Объединённая колонка: Наименование + Категория СО -->
+    <!-- Наименование -->
     <ng-container matColumnDef="name">
       <th mat-header-cell
           [matTooltip]="'Наименование, номер'"
           *matHeaderCellDef>
-        Наименование, номер реактива
+        Наименование раствора
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
-        {{ item.name }}, № {{ item.number }}
+        {{ item.name }}
       </td>
     </ng-container>
 
@@ -75,13 +74,10 @@
       <th mat-header-cell
           [matTooltip]="'Организация-изготовитель и дата выпуска стандартного образца'"
           *matHeaderCellDef>
-        Изготовитель и дата выпуска
+        Дата приготовления
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
-        {{ item.producer || '—' }}
-        @if (item.produceDate) {
-          от {{ item.produceDate | date:'dd.MM.yyyy' }}
-        }
+        {{ item.produceDate | date:'dd.MM.yyyy' }}
       </td>
     </ng-container>
 
@@ -119,8 +115,8 @@
 
     <!-- Нормативные документы -->
     <ng-container matColumnDef="regulatoryDocuments">
-      <th mat-header-cell [matTooltip]="'Нормативные документы (НД)'" *matHeaderCellDef>
-        Нормативные документы (НД)
+      <th mat-header-cell [matTooltip]="'Методика измерения'" *matHeaderCellDef>
+        Методика измерения
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
         @if (item.regulatoryDocuments?.length; as count) {
@@ -137,7 +133,7 @@
 
     <!-- Действия → Выпадающее меню -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Действия</th>
+      <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let item">
         <button
           mat-icon-button
@@ -163,16 +159,18 @@
             <span>Создать на основе</span>
           </button>
 
-          <button
-            mat-menu-item
-            (click)="openDialogExpenditure(item)">
-            <mat-icon>remove_shopping_cart</mat-icon>
-            <span>Взять реактив</span>
-          </button>
+          @if (item.canUse) {
+            <button
+              mat-menu-item
+              (click)="openDialogExpenditure(ReagentExpenditureDialog, item, Mode.CREATE)">
+              <mat-icon>remove_shopping_cart</mat-icon>
+              <span>Взять реактив</span>
+            </button>
+          }
 
           <button
             mat-menu-item
-            (click)="openHistoryExpenditure(item)">
+            (click)="openDialogExpenditure(ReagentHistoryExpenditure, item, Mode.VIEW)">
             <mat-icon>receipt_long</mat-icon>
             <span>История расхода</span>
           </button>
@@ -180,7 +178,7 @@
           <!-- Удалить -->
           <button
             mat-menu-item
-            (click)="delete(item.id)">
+            (click)="delete(getPathDelete(item.id))">
             <mat-icon>{{ item.canUse ? 'move_to_inbox' : 'delete' }}</mat-icon>
             <span>{{ item.canUse ? 'Убрать в архив' : 'Удалить' }} </span>
           </button>
