--- a/src/app/components/settings/main/main.html
+++ b/src/app/components/settings/main/main.html
@@ -1,7 +1,7 @@
 <mat-tab-group class="vertical-tabs" mat-stretch-tabs="false">
   <mat-tab label="Подписка">
     <ng-template matTabContent>
-      <app-sub></app-sub>
+      <app-sub />
     </ng-template>
   </mat-tab>
   <mat-tab label="Уведомления">
@@ -11,7 +11,7 @@
   </mat-tab>
   <mat-tab label="Безопасность">
     <ng-template matTabContent>
-      <app-security></app-security>
+      <app-security />
     </ng-template>
   </mat-tab>
 </mat-tab-group>
