--- a/src/app/components/settings/subscribe/sub/sub.html
+++ b/src/app/components/settings/subscribe/sub/sub.html
@@ -2,13 +2,13 @@
 
   <mat-tab label="Выбор тарифного плана">
     <ng-template matTabContent>
-      <app-tarif-plan></app-tarif-plan>
+      <app-tarif-plan />
     </ng-template>
   </mat-tab>
 
 
   <mat-tab label="История транзакций">
-    <app-transactions #transactionsTab></app-transactions>
+    <app-transactions #transactionsTab />
   </mat-tab>
 
 </mat-tab-group>
